--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@ content="lE=edge">
 <link rel="stylesheet" href="style.css">
 <title> Gerador de senha</title>
 </head>
-<body>
-</body>
-</html>
+  
 <body>
 <img class="logo" src="./assets/logo.png" alt="Gerador senha logo"/>
 <div class="container-input">
 ‹span>Tamanho <span id="valor"></span> caracteres</span>
-<input id="slider" class="slider" type="range" min="5"
-max="25" value="15"/>
+<input id="slider" class="slider" type="range" min="5" max="25" value="15"/>
 <button id="button" class="button-cta"
 onclick="generatePassword (">Gerar senha</button>
 </div>
