--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ content="lE=edge">
 </head>
   
 <body>
-<img class="logo" src="./assets/logo.png" alt="Gerador senha logo"/>
+<img class="logo" src="IMG_4091.jpeg" alt="Gerador senha logo"/>
 <div class="container-input">
 ‹span>Tamanho <span id="valor"></span> caracteres</span>
 <input id="slider" class="slider" type="range" min="5" max="25" value="15"/>
