--- a/index.html
+++ b/index.html
@@ -20,3 +20,12 @@ onclick="generatePassword (">Gerar senha</button>
 </div>
 </body>
 </html>
+<div id="container-password" onclick="copyPasswordO"
+class="container-password hide">
+<span class="title">Sua senha gerada foi:</span> 
+<span id="password" class="password"</span>
+  <span class="tooltip"> Clique na senha para copiar.👆</span>
+</div>
+<script src="script.js" /script>
+</body> 
+</html>
